--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,10 @@
 <title>Вересюк Олександр - кандидат на посаду верстальщика</title>
 </head>
 <body>
-<div class="wrapper">
+
+<!--Wrapper-->
+
+<div class="wrapper-high">
 <div class="header">
           <div class="header-info">
               <a href="https://www.facebook.com/aleksandr.veresyuk" target="_blank" title="Мій Фейсбук"><p class="fbook"></p></a>
@@ -26,39 +29,53 @@
     <h3>Досвід роботи:</h3>
            
 <dl>
+
+<!--Latest job-->
+
+<h4>QA trainee</h4>
+
+<dt>З вересня 2016 по теперішній час (6 місяців))</dt>
+<dt>ELEKS, Тернопіль (Консультування та забезпечення контролю якості)</dt>
+<dd>Ручне тестування десктопних аплікацій та веб інтерфейсів, робота з тестовою документацією. Виконання тест-кейсів з використанням вже існуючого плану тестування. Написання автоматизованих тестів на Java за допомогою Selenium Web Driver. Робота з VMware Worstation Pro, Jira, Fiddler, Eclipse, Selenium WebDriver, Test NG та ін.</dd>
+
+<!--5th job-->
+
 <h4>Контент-менеджер</h4>
 
 <dt>з жовтня 2015 по серпень 2016(4 місяці))</dt>
 <dt>Perfect, ТМ (Віконенко, ТОВ), Тернопіль (Металопластикові вікна, двері)</dt>
-
 <dd>Наповнення та редагування контенту на сайті. Пошук та збір інформації для написання(рерайту) описів товарів. Усунення простих помилок, та опис складних неполадок на сайті, виконання різного роду звітності по функціонуванню сайту, контроль його корректної роботи.</dd>
+
+<!--4th job-->
+
 <h4>Продавець-консультант</h4>
 
 <dt>З  жовтня 2011 по жовтень 2015 (4 роки)</dt>
 <dt>Ringoo, Тернопіль (Продаж смартфонів, цифрової техніки та аксесуарів)</dt>
-
 <dd>Продаж смартфонів та аксесуарів, налаштування та надання різного роду послуг, консультація клієнтів, дотримання порядку та правильної викладки вітрин, касова дисципліна, надання та обробка періодичної звітності, облік, прийом та відправка товарно-матеріальних цінностей.</dd>
+
+<!--3nd job-->
 
 <h4>Продавець</h4>
 
 <dt>З травня 2011 по липень 2011 (2 місяці)</dt>
 <dt>220V (Продаж електро- та світло-технічного обладнання)</dt>
-
 <dd>Продаж, прийом та облік товару на гуртовні.</dd>
+
+<!--2nd job-->
 
 <h4>Співвласник</h4>
 
 <dt>З червня 2010 по теперішній час (5 років 1 місяць)</dt>
 <dt>Інтернет-магазин "Кіт Гаврило" в соц. мережі Вконтакті (Продаж брендових речей)</dt>
-
 <dd>Продаж брендових речей через соціальну мережу. (http://vk.com/catstore)
 Є досвід адміністрування, оформлення та розкрутки сторінки в соціальних мережах.</dd>
 
-<h4>Продавець-консультант</h4>
+<!--First job-->
 
+<h4>Продавець-консультант</h4>
 <dt>з 01.2008 по 04.2011 (3 роки 3 місяці)</dt>
 <dt>DiaWest (Продаж комп'ютерів, ноутбуків, цифрової техніки)</dt>
-
 <dd>Продаж комп'ютерної техніки, ноутбуків, аксессуарів та комплектуючих, надання послуг. Консультація клієнтів, дотримання порядку та правильної викладки вітрин, прийом товару.</dd>
                                                           </dl></div>
           
@@ -78,20 +95,8 @@
       <div class="footer-info">
            <p>&#169; 2015</p>
            <p>Veresyuk Oleksandr</p>
-           <p class="counter"><!--LiveInternet counter--><script type="text/javascript"><!--
-document.write("<a href='//www.liveinternet.ru/click' "+
-"target=_blank><img src='//counter.yadro.ru/hit?t22.11;r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";"+Math.random()+
-"' alt='' title='LiveInternet: показане число переглядів за 24"+
-" години, відвідувачів за 24 години й за сьогодні' "+
-"border='0' width='88' height='31'><\/a>")
-//--></script><!--/LiveInternet--></p> 
            <p>VERESYUK.TE.UA</p
                                    ></div>  
                                         </div>
-                                                                          </div>
 </body>
 </html>
