--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,9 @@
 </style>
 </head>
 <body>
+
+<!--Wrapper-->
+
 <div class="wrapper">
 <div class="header">
           <div class="header-info">
@@ -47,29 +50,7 @@
       <div class="footer-info">
            <p>&#169; 2015</p>
            <p>Veresyuk Oleksandr</p>
-           <p class="counter"><!--LiveInternet counter--><script type="text/javascript"><!--
-document.write("<a href='//www.liveinternet.ru/click' "+
-"target=_blank><img src='//counter.yadro.ru/hit?t22.11;r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";"+Math.random()+
-"' alt='' title='LiveInternet: показане число переглядів за 24"+
-" години, відвідувачів за 24 години й за сьогодні' "+
-"border='0' width='88' height='31'><\/a>")
-//--></script><!--/LiveInternet--></p> 
            <p>VERESYUK.TE.UA</p></div>  
-                                        </div>
-                                                  </div>
-
-
-
-
-
-
-
-
-
-                                      
+                                        </div>                                      
 </body>
 </html>
